	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================
07/04
	* Fixed spiritual ring [Playtester]
	* Cursey Abbey mob updates [Playtester]
	- fixed some bugs in the item_db
	- updated sql files
07/03
	* Rev. 10849 Reverted some preciously item-type 11 items back to 11. [L0ne_W0lf]
	  Itemskill apparently depends on item-type 11 or it won't work.
	* Thor Volcano mob updates [Playtester]
	* Rev. 10846 More updates to AEGIS name fields. [L0ne_W0lf]
	* Fixed job code error with Spiritual Ring.
	* Added several new items, and Updated various fields in others.
07/02
	* Rev. 10841 Updated some AEGIS names. (Still more to do) [L0ne_W0lf]
	* Updated Flame Lord Ring, Ring of Resonance, and their set skills.
	* Updated Spiritual Ring, effect and rates.
	* Updated Lesser_Elemental_Ring, added auto-cast skills.
	* Adjusted some other auto-cast skills.
	* Adjusted Doom_Slayer's chance to break armor (1% -> 5%)
	* There are no longer any items that use the item-type (use delay) 11.
	* Modified Cash shop scroll items to use "unitskilluseid"
06/29
	* Added Christmas Goblin taming item [Playtester]
06/28
	* Updated Kasa skill usage thanks to Doddler [Playtester]
06/27
	* Fixed Homunculus races [Playtester]
06/16
	* Updated Ifrit and Byorgue drops [Playtester]
	- removed incomplete items from drops
	- updated Ganbantein on Ifrit and Kasa
	* Removed Mdef bonus on Ph.D Hat [Playtester]
06/09
	* Rev. 10745 Added Old_Bleu_Box and added corrisponding item group entries. [L0ne_W0lf]
	* Updated Red_Box_ and added corrisponding item group entries.
	* Updated constants to include IG_BleuBox and IG_Red_Box_2.
	* Rev. 10736 Updated (and added) item_trade entries. (Converted from Aegis.) [L0ne_W0lf]