@@ -3,6 +3,14 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/07/05
+	* Fixed pet equip and pet hairstyle packet sends [ultramage]
+	* Fixed NPC_STOP's visual effect not clearing when the status ends
+	* Corrected @homshuffle making the skill tree be lost.
+	* Corrected homunculus skills being unusable if the master was sitting or
+	  inflicted by a disabling status (eg: petrify, stun)
+	* Some fixes to the cell no stacking mod (mainly mobs would just get stuck
+	  behind each other and not properly surround you). [Skotlex]
 2007/07/04
 	* Fixed a copy-paste typo messing up script variables pretty bad D:
 2007/07/03
