@@ -48,6 +48,8 @@
 	13107 Western_Outlaw		Need correct HIT and ASPD Rate
 	----
 ========================
+07/05
+	* Updated the SC constant listing in db/const.txt [Skotlex]
 07/04
 	* Fixed spiritual ring [Playtester]
 	* Cursey Abbey mob updates [Playtester]
